--- a/public/app.css
+++ b/public/app.css
@@ -1149,6 +1149,8 @@ hr {
     padding: 0px; } }
 
 @media screen and (max-width: 850px) {
+  span.required {
+    display: none !important; }
   .card {
     margin-bottom: 30px;
     width: 100%; }
@@ -1852,6 +1854,8 @@ input:required:valid {
     padding: 0px; } }
 
 @media screen and (max-width: 850px) {
+  span.required {
+    display: none !important; }
   .card {
     margin-bottom: 30px;
     width: 100%; }
